--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,11 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/mars.png
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-
+    - assets/img/earth.png
+    - assets/img/mercury.png
+    - assets/img/moon.png
+    - assets/img/neptune.png
+  #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
@@ -48,11 +49,6 @@ flutter:
       fonts:
         - asset: assets/fonts/Poppins-SemiBold.otf
           weight: 600
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
