添加 Card 文案完成

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ flutter:
     - assets/img/mercury.png
     - assets/img/moon.png
     - assets/img/neptune.png
+    - assets/img/ic_distance.png
+    - assets/img/ic_gravity.png
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
@@ -49,6 +51,8 @@ flutter:
       fonts:
         - asset: assets/fonts/Poppins-SemiBold.otf
           weight: 600
+        - asset: assets/fonts/Poppins-Regular.otf
+          weight: 400
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
